--- a/tasks/Taskfile.python.yml
+++ b/tasks/Taskfile.python.yml
@@ -171,14 +171,10 @@ tasks:
         pip3 install \
           --default-timeout=120 \
           --index-url=https://pypi.org/simple/ \
-          --extra-index-url https://{{.ARTIFACTORY_HOST}}/artifactory/api/pypi/pypi-local/simple \
           --upgrade \
           --disable-pip-version-check \
           --no-warn-conflicts \
-          -r requirements.txt \
-          -r requirements-dev.txt
-    status:
-      - test -e {{.venv_path}}/bin/uvicorn
+          -r requirements.txt
 
   build:
     desc: Build
@@ -203,7 +199,7 @@ tasks:
     cmds:
       - |
         source {{.venv_path}}/bin/activate
-        python {{.ROOT_PATH}}/app/main.py
+        python {{.ROOT_DIR}}/app/main.py
 
   stop:gunicorn:
     desc: Stops gunicorn if running as a daemon
