--- a/tasks/Taskfile.workspace.yml
+++ b/tasks/Taskfile.workspace.yml
@@ -3,29 +3,28 @@
 version: '3'
 silent: true
 vars:
-  ROOT_PATH: '{{default "." .ROOT_PATH}}'
-  workspace_profiles: "{{.ROOT_PATH}}/profiles"
+  workspace_profiles: "{{.ROOT_DIR}}/profiles"
   workspaces: "workspace"
   PROFILE: '{{default "default" .PROFILE}}'
   CONFIG_FILE: "{{.workspace_profiles}}/{{.PROFILE}}.yml"
   PULL_UPDATES: '{{default "false" .PULL_UPDATES}}'
-  WORKSPACE:
-    sh: echo "$(yq '.workspace' {{.CONFIG_FILE}})"
-  WORKSPACE_PROJECT: 
-    sh: echo "$(yq '.project' {{.CONFIG_FILE}})"
-  TARGET_PATH: "{{.ROOT_PATH}}/{{.WORKSPACE}}/{{.WORKSPACE_PROJECT}}"
+
 tasks:
   show:
     desc: Show variables for workspace tasks
     cmds:
     - |
-      echo "ROOT_PATH: {{.ROOT_PATH}}"
-      echo "CONFIG_FILE: {{.CONFIG_FILE}}"
       REPO_COUNT=$(yq '.repos | length' {{.CONFIG_FILE}})
-      echo "WORKSPACE: {{.WORKSPACE}}"
+      WORKSPACE=${WORKSPACE:-"$(yq '.workspace' {{.CONFIG_FILE}} )"}
+      WORKSPACE_PROJECT=$(yq '.project' {{.CONFIG_FILE}})
+      TARGET_PATH="{{.ROOT_DIR}}/${WORKSPACE}/${WORKSPACE_PROJECT}"
+      echo "ROOT_DIR: {{.ROOT_DIR}}"
+      echo "workspace_profiles: {{.workspace_profiles}}"
+      echo "CONFIG_FILE: {{.CONFIG_FILE}}"
+      echo "WORKSPACE: ${WORKSPACE}"
       echo "PROFILE: {{.PROFILE}}"
       echo "REPO_COUNT: ${REPO_COUNT}"
-      echo "TARGET_PATH: {{.TARGET_PATH}}"
+      echo "TARGET_PATH: ${TARGET_PATH}"
 
   sync:
     desc: Initialize and/or sync workspace for profile
@@ -37,26 +36,26 @@ tasks:
         popd () {
           command popd "$@" > /dev/null
         }
-        TARGET_PATH="{{.ROOT_PATH}}/{{.WORKSPACE}}/{{.WORKSPACE_PROJECT}}"
+        WORKSPACE=${WORKSPACE:-"$(yq '.workspace' {{.CONFIG_FILE}} )"}
+        WORKSPACE_PROJECT=$(yq '.project' {{.CONFIG_FILE}})
+        TARGET_PATH="{{.ROOT_DIR}}/${WORKSPACE}/${WORKSPACE_PROJECT}"
         REPO_COUNT=$(yq '.repos | length' {{.CONFIG_FILE}})
-        echo "WORKSPACE: {{.WORKSPACE}}"
+        echo "WORKSPACE: ${WORKSPACE}"
         echo "CONFIG_FILE: {{.CONFIG_FILE}}"
         echo "PROFILE: {{.PROFILE}}"
         echo "REPO_COUNT: ${REPO_COUNT}"
-        echo "TARGET_PATH: {{.TARGET_PATH}}"
-        mkdir -p "{{.TARGET_PATH}}" >/dev/null
+        echo "TARGET_PATH: ${TARGET_PATH}"
+        mkdir -p "${TARGET_PATH}" >/dev/null
         echo "---"
         REPO_INDEX=0
-        pushd {{.TARGET_PATH}}
+        pushd ${TARGET_PATH}
         while [ $REPO_INDEX -lt $REPO_COUNT ]; do
-          cd {{.TARGET_PATH}}
+          cd ${TARGET_PATH}
           CURRENT_NAME=$(yq ".repos.[$REPO_INDEX].name" {{.CONFIG_FILE}})
           CURRENT_URL=$(yq ".repos.[$REPO_INDEX].url" {{.CONFIG_FILE}})
           CLONE_BRANCHES=$(yq ".repos.[$REPO_INDEX].branches | .[]" {{.CONFIG_FILE}})
-          CLONE_PATH="{{.TARGET_PATH}}/${CURRENT_NAME}"
+          CLONE_PATH="${TARGET_PATH}/${CURRENT_NAME}"
           echo "Sync Project: ${CURRENT_NAME}"
-          #echo "CURRENT_URL: ${CURRENT_URL}"
-          #echo "CLONE_PATH: ${CLONE_PATH}"
           mkdir -p ${CLONE_PATH}
           git clone --recursive ${CURRENT_URL} ${CLONE_PATH} || true
           cd ${CLONE_PATH}
@@ -71,31 +70,35 @@ tasks:
                   #git pull
                   #git stash pop
               done
-              git checkout {{.ROOT_PATH}} 2>/dev/null
+              git checkout {{.ROOT_DIR}} 2>/dev/null
           fi
           let REPO_INDEX=REPO_INDEX+1
           echo ""
         done
         popd
-        echo "Workspace Created: {{.TARGET_PATH}}"
+        echo "Workspace Created: ${TARGET_PATH}"
       - task: vscode:create
 
   vscode:select:
     desc: Use fzf to select a project in a workspace and open with vscode
+    silent: false
     cmds:
       - |
         WORKSPACE=${WORKSPACE:-"$(yq '.workspace' {{.CONFIG_FILE}} )"}
         WORKSPACE_PROJECT=$(yq '.project' {{.CONFIG_FILE}})
-        TARGET_PATH="{{.WORKSPACE}}/{{.WORKSPACE_PROJECT}}"
-        SELECTION=$(find "{{.TARGET_PATH}}" -type d -depth 1 -not -path '*/\.*' -prune -print | sort | fzf) && \
-        [ "$SELECTION" != "./" ] && code "${SELECTION}" || true
+        TARGET_PATH="${WORKSPACE}/${WORKSPACE_PROJECT}"
+        SELECTION=$(find ${TARGET_PATH} -mindepth 1 -maxdepth 1 -type d -exec basename {} \; | sort | fzf) && \
+        [ "$SELECTION" != "./" ] && code "./${TARGET_PATH}/${SELECTION}" || true
 
   select:
     desc: Use fzf to select a workspace and open with vscode
     cmds:
       - |
-        SELECTION=$(find "./{{.workspaces}}" -type d -depth 1 -not -path '*/\.*' -prune -print | sort | fzf) && \
-        [ "$SELECTION" != "./" ] && code "./{{.workspaces}}/${SELECTION}/workspace.code-workspace" || true
+        WORKSPACE=${WORKSPACE:-"$(yq '.workspace' {{.CONFIG_FILE}} )"}
+        WORKSPACE_PROJECT=$(yq '.project' {{.CONFIG_FILE}})
+        TARGET_PATH="${WORKSPACE}"
+        SELECTION=$(find ${TARGET_PATH} -mindepth 1 -maxdepth 1 -type d -exec basename {} \; | sort | fzf) && \
+        [ "$SELECTION" != "./" ] && code "./${TARGET_PATH}/${SELECTION}/workspace.code-workspace" || true
 
   vscode:create:
     desc: Create vscode workspace file relative to this project
@@ -112,5 +115,5 @@ tasks:
             echo "Adding path: ${newpath}"
             VSCODEWS=$(echo $VSCODEWS | jq --arg newpath "$newpath" '.folders += [{ "path": $newpath }]')
         done
-        echo $VSCODEWS | jq > {{.ROOT_PATH}}/{{.WORKSPACE}}/{{.WORKSPACE_PROJECT}}/workspace.code-workspace
-        echo "Workspace file for VSCode created: ./{{.WORKSPACE}}/{{.WORKSPACE_PROJECT}}/workspace.code-workspace"
+        echo $VSCODEWS | jq > {{.ROOT_DIR}}/${WORKSPACE}/${WORKSPACE_PROJECT}/workspace.code-workspace
+        echo "Workspace file for VSCode created: ./${WORKSPACE}/${WORKSPACE_PROJECT}/workspace.code-workspace"
