--- a/tasks-inactive/Taskfile.kube.yml
+++ b/tasks-inactive/Taskfile.kube.yml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=https://taskfile.dev/schema.json
 
-version: '3'
+version: "3"
 silent: true
 vars:
   LOCAL_BIN_PATH: '{{default "./.local/bin" .PROJECT_BIN_PATH}}'
@@ -8,15 +8,15 @@ vars:
     sh: "dirname {{.PROJECT_BIN_PATH}}"
   CONFIG_PATH: '{{default "{{.ROOT_DIR}}/config" .CONFIG_PATH}}'
   KUBECTL_VERSION: '{{default "1.20.1" .KUBECTL_VERSION}}'
-  kubectl: '{{.PROJECT_BIN_PATH}}/kubectl'
-  KUBECONFIG: '{{.PROJECT_BIN_BASE_PATH}}/kubeconfig'
+  kubectl: "{{.PROJECT_BIN_PATH}}/kubectl"
+  KUBECONFIG: "{{.PROJECT_BIN_BASE_PATH}}/kubeconfig"
   KUBE_DISTRIBUTION: '{{default "kind" .KUBE_DISTRIBUTION}}'
 
 tasks:
   show:
     desc: Show terraform variables for this task
     cmds:
-      - | 
+      - |
         echo "PROJECT_BIN_BASE_PATH: {{.PROJECT_BIN_BASE_PATH}}"
         echo "KUBECTL_VERSION: {{.KUBECTL_VERSION}}"
         echo "KUBECONFIG: {{.KUBECONFIG}}"
@@ -25,7 +25,7 @@ tasks:
   kubectl:install:
     desc: Install local kubectl binary
     cmds:
-      - | 
+      - |
         echo "Attempting to install kubectl - {{.KUBECTL_VERSION}}"
         mkdir -p {{.PROJECT_BIN_PATH}}
         curl --retry 3 --retry-delay 5 --fail -sSL -o {{.kubectl}} https://storage.googleapis.com/kubernetes-release/release/v{{.KUBECTL_VERSION}}/bin/{{OS}}/{{ARCH}}/kubectl
@@ -40,7 +40,7 @@ tasks:
   start:
     desc: Start a local kind cluster
     cmds:
-      - | 
+      - |
         {{.kind}} create cluster \
           --kubeconfig {{.KIND_KUBE_CONFIG}} \
           --config {{.KIND_CONFIG}} \
@@ -48,9 +48,9 @@ tasks:
 
   install:ingress:nginx:
     desc: Install ingress to kube
-    deps: [ kubectl:install ]
+    deps: [kubectl:install]
     cmds:
-      - | 
+      - |
         echo "Installing ingress controller.."
         {{.kubectl}} apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/kind/deploy.yaml || true
         {{.kubectl}} wait --namespace ingress-nginx \
@@ -72,54 +72,55 @@ tasks:
         {{.kubectl}} --kubeconfig {{.KIND_KUBE_CONFIG}} \
           config view --raw -o=jsonpath='{.clusters[0].cluster.certificate-authority-data}' | base64 --decode > {{.PROJECT_BIN_BASE_PATH}}/kube_ca.pem
         $(MAKE) vault/token > {{.PROJECT_BIN_BASE_PATH}}/token_reviewer_jwt.txt
-        install:k3d:
-          desc: Install k3d
-          silent: true
-          env:
-            USE_SUDO: "false"
-            K3D_INSTALL_DIR: "{{.local_bin_path}}"
-          cmds:
-            - |
-              curl -s https://raw.githubusercontent.com/rancher/k3d/main/install.sh | bash
-          status:
-            - test -f {{.local_bin_path}}/k3d
-      
-        install:autok3s:
-          desc: Install autok3s utility
-          silent: true
-          cmds:
-            - |
-              mkdir -p {{.local_bin_path}}
-              curl --retry 3 --retry-delay 5 --fail -sSL -o {{.local_bin_path}}/autok3s \
-                https://github.com/cnrancher/autok3s/releases/download/v{{.autok3s_version}}//autok3s_{{OS}}_{{ARCH}} 
-              chmod +x {{.local_bin_path}}/autok3s
-              echo "installed binary: {{.local_bin_path}}/autok3s"
-          status:
-            - "test -f {{.local_bin_path}}/autok3s"
-      
-        cluster:
-          desc: Start 2 local kubernetes clusters as docker containers
-          silent: true
-          deps:
-            - install:autok3s
-          cmds:
-            - |
-              echo "starting: {{.kube_cluster_name}}"
-              {{.local_bin_path}}/autok3s create -p k3d --name {{.kube_cluster_name}} --master=1 --worker=1 || echo "Not able to start {{.kube_cluster_name}}"
-      
-        cluster:off:
-          desc: Remove local kube clusters
-          silent: true
-          cmds:
-            - |
-              {{.local_bin_path}}/autok3s delete -p k3d --name {{.kube_cluster_name}} -f || echo "Unable to delete cluster"
-              {{.local_bin_path}}/autok3s delete -p k3d --name cluster2 -f || echo "Unable to delete cluster"
-      
+
+  install:k3d:
+    desc: Install k3d
+    silent: true
+    env:
+      USE_SUDO: "false"
+      K3D_INSTALL_DIR: "{{.local_bin_path}}"
+    cmds:
+      - |
+        curl -s https://raw.githubusercontent.com/rancher/k3d/main/install.sh | bash
+    status:
+      - test -f {{.local_bin_path}}/k3d
+
+  install:autok3s:
+    desc: Install autok3s utility
+    silent: true
+    cmds:
+      - |
+        mkdir -p {{.local_bin_path}}
+        curl --retry 3 --retry-delay 5 --fail -sSL -o {{.local_bin_path}}/autok3s \
+          https://github.com/cnrancher/autok3s/releases/download/v{{.autok3s_version}}//autok3s_{{OS}}_{{ARCH}} 
+        chmod +x {{.local_bin_path}}/autok3s
+        echo "installed binary: {{.local_bin_path}}/autok3s"
+    status:
+      - "test -f {{.local_bin_path}}/autok3s"
+
+  cluster:
+    desc: Start 2 local kubernetes clusters as docker containers
+    silent: true
+    deps:
+      - install:autok3s
+    cmds:
+      - |
+        echo "starting: {{.kube_cluster_name}}"
+        {{.local_bin_path}}/autok3s create -p k3d --name {{.kube_cluster_name}} --master=1 --worker=1 || echo "Not able to start {{.kube_cluster_name}}"
+
+  cluster:off:
+    desc: Remove local kube clusters
+    silent: true
+    cmds:
+      - |
+        {{.local_bin_path}}/autok3s delete -p k3d --name {{.kube_cluster_name}} -f || echo "Unable to delete cluster"
+        {{.local_bin_path}}/autok3s delete -p k3d --name cluster2 -f || echo "Unable to delete cluster"
+
   # vault/cronjob:
   #   desc: Helm deploy the vault cronjob deployment
   #   silent: true
   #   cmds:
-  #     - | 
+  #     - |
   #       mkdir -p $(HELM_CACHE_HOME)
   #       echo "VAULT_ADDRESS: ${VAULT_ADDRESS}"
   #       {{.kubectl}} --kubeconfig {{.KIND_KUBE_CONFIG}} create ns $(VAULT_NS) || true
@@ -140,114 +141,113 @@ tasks:
   #         --set "vault.token=root"
   #       $(MAKE) vault/token > {{.PROJECT_BIN_BASE_PATH}}/token_reviewer_jwt.txt
 
-# vault/cronjob/run:
-# desc: Create a new job from the cronjob and run it
-#   {{.kubectl}} --kubeconfig {{.KIND_KUBE_CONFIG}} -n $(VAULT_NS) \
-#     create job --from=cronjob/vault-integration-update vault-integration-manual-run || true
+  # vault/cronjob/run:
+  # desc: Create a new job from the cronjob and run it
+  #   {{.kubectl}} --kubeconfig {{.KIND_KUBE_CONFIG}} -n $(VAULT_NS) \
+  #     create job --from=cronjob/vault-integration-update vault-integration-manual-run || true
 
-# vault/cronjob/template:
-# desc: Helm template the vault cronjob deployment
-#   {{.helm}} -n $(VAULT_NS) --kubeconfig {{.KIND_KUBE_CONFIG}} template \
-#     vault-integration {{.ROOT_DIR}}/charts/vault-integration \
-#     --set "default.cluster_id=kind" \
-#     --set "vault.owner=controller" \
-#     --set "vault.initialize=false" \
-#     --set "vault.namespace=$(VAULT_NS)" \
-#     --set "vault.image.repository=$(DOCKER_IMAGE)" \
-#     --set "vault.image.tag=local" \
-#     --set "vault.imagePullPolicy=Never" \
-#     --set "vault.address=http://$(VAULT_ADDRESS):8200" \
-#     --set "vault.kube_url=$(KUBE_URL)" \
-#     --set "vault.kv.path=controller/kv" \
-#     --set "vault.kv.secret=controller/kind/vault_auth" \
-#     --set "vault.auth_method=token" \
-#     --set "vault.token=root"
+  # vault/cronjob/template:
+  # desc: Helm template the vault cronjob deployment
+  #   {{.helm}} -n $(VAULT_NS) --kubeconfig {{.KIND_KUBE_CONFIG}} template \
+  #     vault-integration {{.ROOT_DIR}}/charts/vault-integration \
+  #     --set "default.cluster_id=kind" \
+  #     --set "vault.owner=controller" \
+  #     --set "vault.initialize=false" \
+  #     --set "vault.namespace=$(VAULT_NS)" \
+  #     --set "vault.image.repository=$(DOCKER_IMAGE)" \
+  #     --set "vault.image.tag=local" \
+  #     --set "vault.imagePullPolicy=Never" \
+  #     --set "vault.address=http://$(VAULT_ADDRESS):8200" \
+  #     --set "vault.kube_url=$(KUBE_URL)" \
+  #     --set "vault.kv.path=controller/kv" \
+  #     --set "vault.kv.secret=controller/kind/vault_auth" \
+  #     --set "vault.auth_method=token" \
+  #     --set "vault.token=root"
 
-# vault/certmanager:
-# desc: Helm deploy the vault certmanager integration
-#   mkdir -p $(HELM_CACHE_HOME)
-#   echo "VAULT_ADDRESS: ${VAULT_ADDRESS}"
-#   {{.kubectl}} --kubeconfig {{.KIND_KUBE_CONFIG}} \
-#     create ns $(VAULT_CERTMANAGER_NS) 2> /dev/null || true
-#   {{.helm}} -n $(VAULT_CERTMANAGER_NS) --kubeconfig {{.KIND_KUBE_CONFIG}} upgrade -i \
-#     vault-certmanager-integration {{.ROOT_DIR}}/charts/vault-integration \
-#     --set "default.cluster_id=kind" \
-#     --set "vault.environment=local" \
-#     --set "vault.address=http://$(VAULT_ADDRESS):8200" \
-#     --set "vault.isEnabled=false" \
-#     --set "vault.initialize=false" \
-#     --set "certmanager.enabled=true" \
-#     --set "certmanager.auth=$(VAULT_CERTMANAGER_AUTH)" \
-#     --set "certmanager.kubernetes.role=kubernetes_kind_cert-manager_cert-manager" \
-#     --set "certmanager.kubernetes.secret=$(shell $(MAKE) lab/certmanager/sa/export)" \
-#     --set "certmanager.pki.role=app1_issuer" \
-#     --set "certmanager.pki.mount=pki/caint" \
-#     --set 'certmanager.pki.caBundle=$(shell curl -s \
-#       -X GET http://127.0.0.1:8200/v1/pki/caint/ca_chain \
-#       -H "accept: */*" \
-#       -H  "X-Vault-Token: ${VAULT_TOKEN}" | base64)' \
-#     --set "certmanager.approle.role_id=$(shell $(MAKE) lab/app1/approle/role/export)" \
-#     --set "certmanager.approle.role=app1_issuer" \
-#     --set "certmanager.approle.secret=$(shell $(MAKE) lab/app1/approle/secret/export)"
-# #--set "certmanager.pki.caBundle=$(shell cat ./.local/kube_ca.pem | base64)" \
+  # vault/certmanager:
+  # desc: Helm deploy the vault certmanager integration
+  #   mkdir -p $(HELM_CACHE_HOME)
+  #   echo "VAULT_ADDRESS: ${VAULT_ADDRESS}"
+  #   {{.kubectl}} --kubeconfig {{.KIND_KUBE_CONFIG}} \
+  #     create ns $(VAULT_CERTMANAGER_NS) 2> /dev/null || true
+  #   {{.helm}} -n $(VAULT_CERTMANAGER_NS) --kubeconfig {{.KIND_KUBE_CONFIG}} upgrade -i \
+  #     vault-certmanager-integration {{.ROOT_DIR}}/charts/vault-integration \
+  #     --set "default.cluster_id=kind" \
+  #     --set "vault.environment=local" \
+  #     --set "vault.address=http://$(VAULT_ADDRESS):8200" \
+  #     --set "vault.isEnabled=false" \
+  #     --set "vault.initialize=false" \
+  #     --set "certmanager.enabled=true" \
+  #     --set "certmanager.auth=$(VAULT_CERTMANAGER_AUTH)" \
+  #     --set "certmanager.kubernetes.role=kubernetes_kind_cert-manager_cert-manager" \
+  #     --set "certmanager.kubernetes.secret=$(shell $(MAKE) lab/certmanager/sa/export)" \
+  #     --set "certmanager.pki.role=app1_issuer" \
+  #     --set "certmanager.pki.mount=pki/caint" \
+  #     --set 'certmanager.pki.caBundle=$(shell curl -s \
+  #       -X GET http://127.0.0.1:8200/v1/pki/caint/ca_chain \
+  #       -H "accept: */*" \
+  #       -H  "X-Vault-Token: ${VAULT_TOKEN}" | base64)' \
+  #     --set "certmanager.approle.role_id=$(shell $(MAKE) lab/app1/approle/role/export)" \
+  #     --set "certmanager.approle.role=app1_issuer" \
+  #     --set "certmanager.approle.secret=$(shell $(MAKE) lab/app1/approle/secret/export)"
+  # #--set "certmanager.pki.caBundle=$(shell cat ./.local/kube_ca.pem | base64)" \
 
-# vault/certmanager/template:
-# desc: Helm template the vault certmanager integration
-#   {{.helm}} -n $(VAULT_CERTMANAGER_NS) template \
-#     vault-certmanager-integration {{.ROOT_DIR}}/charts/vault-integration \
-#     --set "default.cluster_id=kind" \
-#     --set "vault.environment=local" \
-#     --set "vault.address=http://$(VAULT_ADDRESS):8200" \
-#     --set "vault.isEnabled=false" \
-#     --set "vault.initialize=false" \
-#     --set "certmanager.enabled=true" \
-#     --set "certmanager.auth=$(VAULT_CERTMANAGER_AUTH)" \
-#     --set "certmanager.kubernetes.role=kubernetes_kind_cert-manager_cert-manager" \
-#     --set "certmanager.kubernetes.secret=$(shell $(MAKE) lab/certmanager/sa/export)" \
-#     --set "certmanager.pki.role=app1_issuer" \
-#     --set "certmanager.pki.mount=pki/caint" \
-#     --set "certmanager.pki.caBundle=$(shell curl -s -X GET "http://127.0.0.1:8200/v1/pki/caint/ca_chain" -H  "accept: */*" -H  "X-Vault-Token: ${VAULT_TOKEN}" | base64)" \
-#     --set "certmanager.approle.role_id=$(shell $(MAKE) lab/app1/approle/role/export)" \
-#     --set "certmanager.approle.role=app1_issuer" \
-#     --set "certmanager.approle.secret=$(shell $(MAKE) lab/app1/approle/secret/export)"
+  # vault/certmanager/template:
+  # desc: Helm template the vault certmanager integration
+  #   {{.helm}} -n $(VAULT_CERTMANAGER_NS) template \
+  #     vault-certmanager-integration {{.ROOT_DIR}}/charts/vault-integration \
+  #     --set "default.cluster_id=kind" \
+  #     --set "vault.environment=local" \
+  #     --set "vault.address=http://$(VAULT_ADDRESS):8200" \
+  #     --set "vault.isEnabled=false" \
+  #     --set "vault.initialize=false" \
+  #     --set "certmanager.enabled=true" \
+  #     --set "certmanager.auth=$(VAULT_CERTMANAGER_AUTH)" \
+  #     --set "certmanager.kubernetes.role=kubernetes_kind_cert-manager_cert-manager" \
+  #     --set "certmanager.kubernetes.secret=$(shell $(MAKE) lab/certmanager/sa/export)" \
+  #     --set "certmanager.pki.role=app1_issuer" \
+  #     --set "certmanager.pki.mount=pki/caint" \
+  #     --set "certmanager.pki.caBundle=$(shell curl -s -X GET "http://127.0.0.1:8200/v1/pki/caint/ca_chain" -H  "accept: */*" -H  "X-Vault-Token: ${VAULT_TOKEN}" | base64)" \
+  #     --set "certmanager.approle.role_id=$(shell $(MAKE) lab/app1/approle/role/export)" \
+  #     --set "certmanager.approle.role=app1_issuer" \
+  #     --set "certmanager.approle.secret=$(shell $(MAKE) lab/app1/approle/secret/export)"
 
-# vault/certmanager/status:
-# desc: Validate cert-manager issuers
-#   {{.kubectl}} -n $(VAULT_CERTMANAGER_NS) --kubeconfig {{.KIND_KUBE_CONFIG}}  get clusterissuers.cert-manager.io -o wide
+  # vault/certmanager/status:
+  # desc: Validate cert-manager issuers
+  #   {{.kubectl}} -n $(VAULT_CERTMANAGER_NS) --kubeconfig {{.KIND_KUBE_CONFIG}}  get clusterissuers.cert-manager.io -o wide
 
-# vault/rbac:
-# desc: Configure kube with vault required rbac rules
-#   {{.kubectl}} -n $(VAULT_NS) --kubeconfig {{.KIND_KUBE_CONFIG}} apply --filename {{.ROOT_DIR}}/config/token-reviewer.yml
+  # vault/rbac:
+  # desc: Configure kube with vault required rbac rules
+  #   {{.kubectl}} -n $(VAULT_NS) --kubeconfig {{.KIND_KUBE_CONFIG}} apply --filename {{.ROOT_DIR}}/config/token-reviewer.yml
 
-# vault/token/test:
-# desc: Retrieves a reviewer token
-#   {{.kubectl}} -n $(VAULT_NS) --kubeconfig {{.KIND_KUBE_CONFIG}} get secret \
-#   $({{.kubectl}} -n $(VAULT_NS) --kubeconfig {{.KIND_KUBE_CONFIG}} get secrets --output=json | $(jq) -r '.items[].metadata | select(.name|startswith("vault-token-jwt-reviewer")).name')
+  # vault/token/test:
+  # desc: Retrieves a reviewer token
+  #   {{.kubectl}} -n $(VAULT_NS) --kubeconfig {{.KIND_KUBE_CONFIG}} get secret \
+  #   $({{.kubectl}} -n $(VAULT_NS) --kubeconfig {{.KIND_KUBE_CONFIG}} get secrets --output=json | $(jq) -r '.items[].metadata | select(.name|startswith("vault-token-jwt-reviewer")).name')
 
-# vault/token:
-#   desc: Retrieves a reviewer token
-#   {{.kubectl}} -n $(VAULT_NS) --kubeconfig {{.KIND_KUBE_CONFIG}} \
-#     get secret $(KUBE_SERVICE_ACCOUNT) \
-#     --output='go-template={{ .data.token }}' | base64 --decode
+  # vault/token:
+  #   desc: Retrieves a reviewer token
+  #   {{.kubectl}} -n $(VAULT_NS) --kubeconfig {{.KIND_KUBE_CONFIG}} \
+  #     get secret $(KUBE_SERVICE_ACCOUNT) \
+  #     --output='go-template={{ .data.token }}' | base64 --decode
 
-# .vault/external:
-#   desc: Configure kube to point to an external endpoint for vault
-#   {{.kubectl}} -n $(VAULT_NS) --kubeconfig {{.KIND_KUBE_CONFIG}} \
-#   apply --filename {{.ROOT_DIR}}/config/external-vault.yml
-
+  # .vault/external:
+  #   desc: Configure kube to point to an external endpoint for vault
+  #   {{.kubectl}} -n $(VAULT_NS) --kubeconfig {{.KIND_KUBE_CONFIG}} \
+  #   apply --filename {{.ROOT_DIR}}/config/external-vault.yml
 
   # helm/clean:
   #   desc: Clean up helm deployment cache
   #   silent: true
   #   cmds:
-  #     - | 
+  #     - |
   #       rm -rf {{.ROOT_DIR}}/.local/helm
 
   # helm/config:
   #   desc: Configure helm to access remote vault instance
   #   silent: true
   #   cmds:
-  #     - | 
+  #     - |
   #       mkdir -p $(HELM_CACHE_HOME)
   #       {{.helm}} repo add hashicorp https://helm.releases.hashicorp.com || true
   #       {{.helm}} repo update || true
@@ -263,13 +263,13 @@ tasks:
   status:
     desc: Show kubernetes status
     cmds:
-      - | 
+      - |
         {{.kubectl}} --kubeconfig {{.KIND_KUBE_CONFIG}} cluster-info
 
   info:
     desc: Some extra kube info
     cmds:
-      - | 
+      - |
         echo "VAULT_ADDRESS: ${VAULT_ADDRESS}"
         echo "KUBE_TOKEN: ${KUBE_TOKEN}"
         echo "KUBE_CA: ${KUBE_CA}"
