--- a/Taskfile.vars.yml
+++ b/Taskfile.vars.yml
@@ -1,5 +1,5 @@
-version: '3'
+version: "3"
 silent: true
 vars:
-  ANSIBLE_DIR: "{{.ROOT_DIR}}/ansible"
+  ANSIBLE_DIR: "ansible"
   PYTHON_VENV_PATH: "{{.ROOT_DIR}}/venv"
