--- a/tasks/Taskfile.ansible.yml
+++ b/tasks/Taskfile.ansible.yml
@@ -7,11 +7,13 @@ env:
   K8S_AUTH_KUBECONFIG: "{{.ROOT_DIR}}/kubeconfig"
 
 vars:
-  ANSIBLE_PLAYBOOK_DIR: "{{.ANSIBLE_DIR}}/playbooks"
-  ANSIBLE_INVENTORY_DIR: "{{.ANSIBLE_DIR}}/inventory"
+  ANSIBLE_DIR: '{{ .ANSIBLE_DIR | default "ansible" }}'
+  venv_path:
+    sh: echo ${PYTHON_VENV_PATH:-"{{.PYTHON_VENV_PATH}}"}
+  ANSIBLE_PLAYBOOK_DIR: "playbooks"
+  ANSIBLE_INVENTORY_DIR: "inventory"
 
 tasks:
-
   show:
     desc: Show ansible task variables
     cmds:
@@ -21,14 +23,15 @@ tasks:
         echo "K8S_AUTH_KUBECONFIG: ${K8S_AUTH_KUBECONFIG}"
         echo "ANSIBLE_PLAYBOOK_DIR: {{.ANSIBLE_PLAYBOOK_DIR}}"
         echo "ANSIBLE_INVENTORY_DIR: {{.ANSIBLE_INVENTORY_DIR}}"
+        echo "venv_path: {{.venv_path}}"
 
   init:
     desc: Install / Upgrade Ansible galaxy deps
     dir: "{{.ANSIBLE_DIR}}"
     cmds:
-      - source ../venv/bin/activate
-      - pip install --upgrade pip
-      - pip3 install --requirement requirements.txt
+      - source {{.venv_path}}/bin/activate
+      #- pip install --upgrade pip
+      #- pip3 install --requirement ./requirements.txt
       - ansible-galaxy install -r requirements.yml --roles-path ~/.ansible/roles --force
       - ansible-galaxy collection install -r requirements.yml --collections-path ~/.ansible/collections --force
 
