--- a/tasks/Taskfile.workstation.yml
+++ b/tasks/Taskfile.workstation.yml
@@ -24,19 +24,25 @@ tasks:
         echo "OS: {{OS}}"
 
   ubuntu:install:docker:
-    desc: Initial software setup for a pi running ubuntu
+    desc: Install docker + compose
     cmds:
       - |
-        sudo apt update
-        sudo apt autoremove
-        sudo apt upgrade -y
-        sudo apt install curl ca-certificates apt-transport-https software-properties-common -y
-        curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
-        echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+        # Add Docker's official GPG key:
+        sudo apt-get update
+        sudo apt-get install ca-certificates curl
+        sudo install -m 0755 -d /etc/apt/keyrings
+        sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
+        sudo chmod a+r /etc/apt/keyrings/docker.asc
+        # Add the repository to Apt sources:
+        echo \
+          "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu \
+          $(. /etc/os-release && echo "$UBUNTU_CODENAME") stable" | \
+          sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+        sudo apt-get update
+        sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
         sudo usermod -aG docker ${USER}
-        sudo apt update -y
-        sudo apt install docker-ce -y
-        sudo systemctl status docker
+        sudo systemctl enable docker
+        sudo systemctl start docker
     status:
       - type docker > /dev/null
 
