--- a/.github/workflows/yamllint-check.yml
+++ b/.github/workflows/yamllint-check.yml
@@ -13,4 +13,4 @@ jobs:
       - name: Checkout git repo
         uses: actions/checkout@v4
       - name: Run yamllint
-        run: yamllint
+        run: yamllint ./
